force-app/main/default/objects/Account/fields/Joint_Applicant_Salary_Annually_Gross__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Salary_Annually_Gross__c</fullName>
    <label>Joint Applicant Salary (Annually Gross)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>