force-app/main/default/objects/Account/fields/Lake_Location__c.field-meta.xml
<CustomField>
    <fullName>Lake_Location__c</fullName>
    <label>Lake Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lake Norman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>