force-app/main/default/objects/Account/fields/Last_App_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_App_Session_Date__c</fullName>
    <label>Last App Session Date</label>
    <type>DateTime</type>
</CustomField>