force-app/main/default/objects/Account/fields/Lead_Account_History__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Account History</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Account History</relationshipLabel>
    <relationshipName>LeadAccountHistory</relationshipName>
    <type>Lookup</type>
</CustomField>