force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Prospect Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boat Trader</fullName>
            </value>
            <value>
                <fullName>Boat.com</fullName>
            </value>
            <value>
                <fullName>Dealer Spike</fullName>
            </value>
            <value>
                <fullName>Only Inboards</fullName>
            </value>
            <value>
                <fullName>Malibu Boats</fullName>
            </value>
            <value>
                <fullName>Skiers Choice</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Boat Show</fullName>
            </value>
            <value>
                <fullName>Surf Night</fullName>
            </value>
            <value>
                <fullName>Wakeboard Camp</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>SouthTown Watersports</fullName>
            </value>
            <value>
                <fullName>Get a Quote</fullName>
            </value>
            <value>
                <fullName>Value your trade</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>Schedule a Ride</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>Contact Form</fullName>
            </value>
            <value>
                <fullName>Parts Request</fullName>
            </value>
            <value>
                <fullName>Newsletter Signup</fullName>
            </value>
            <value>
                <fullName>Finance Application</fullName>
            </value>
            <value>
                <fullName>Joint Finance Application</fullName>
            </value>
            <value>
                <fullName>Facebook Leads</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>