force-app/main/default/objects/Account/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer to come in</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Waiting on Test Drive</fullName>
            </value>
            <value>
                <fullName>Waiting on Credit app</fullName>
            </value>
            <value>
                <fullName>Waiting on Finance Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Order Boat to Arrive</fullName>
            </value>
            <value>
                <fullName>Schedule to Delivered</fullName>
            </value>
            <value>
                <fullName>Customer Credit Declined</fullName>
            </value>
            <value>
                <fullName>Customer Bought Something Else</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>