force-app/main/default/objects/Account/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <label>Monthly Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>