force-app/main/default/objects/Account/fields/Newsletter_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Opt In</label>
    <type>Checkbox</type>
</CustomField>