force-app/main/default/objects/Account/fields/NewsletterOptIn__c.field-meta.xml
<CustomField>
    <fullName>NewsletterOptIn__c</fullName>
    <label>NewsletterOptIn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>