force-app/main/default/objects/Account/fields/Notify_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Account Owner</label>
    <type>Checkbox</type>
</CustomField>