force-app/main/default/objects/Account/fields/Parts_Request_Description_of_parts__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Description_of_parts__c</fullName>
    <label>Parts Request - Description of parts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>