force-app/main/default/objects/Account/fields/Parts_Request_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Phone__c</fullName>
    <label>Parts Request - Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>