force-app/main/default/objects/Account/fields/Parts_Request_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_State_Province__c</fullName>
    <label>Parts Request - State / Province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>