force-app/main/default/objects/Account/fields/Parts_Request_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Street_Address__c</fullName>
    <label>Parts Request - Street Address</label>
    <type>TextArea</type>
</CustomField>