force-app/main/default/objects/Account/fields/Parts_Request_Your_Boat_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Your_Boat_Manufacturer__c</fullName>
    <label>Parts Request - Your Boat Manufacturer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>