force-app/main/default/objects/Account/fields/Parts_Request_Your_Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Your_Boat_Model__c</fullName>
    <label>Parts Request - Your Boat Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>