force-app/main/default/objects/Account/fields/Parts_Request_Your_HIN_Number__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Your_HIN_Number__c</fullName>
    <label>Parts Request - Your HIN Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>