force-app/main/default/objects/Account/fields/Parts_Request_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Zip_Postal_Code__c</fullName>
    <label>Parts Request - Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>