force-app/main/default/objects/Account/fields/Port_Lower_Unit_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Port_Lower_Unit_if_applicable__c</fullName>
    <label>Port Lower Unit if applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>