force-app/main/default/objects/Account/fields/Possible_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Possible_Revenue_Amount__c</fullName>
    <label>Possible Revenue Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200,000</fullName>
            </value>
            <value>
                <fullName>175,000</fullName>
            </value>
            <value>
                <fullName>150,000</fullName>
            </value>
            <value>
                <fullName>145,000</fullName>
            </value>
            <value>
                <fullName>140,000</fullName>
            </value>
            <value>
                <fullName>135,000</fullName>
            </value>
            <value>
                <fullName>130,000</fullName>
            </value>
            <value>
                <fullName>125,000,</fullName>
            </value>
            <value>
                <fullName>120,000</fullName>
            </value>
            <value>
                <fullName>115,000</fullName>
            </value>
            <value>
                <fullName>110,000</fullName>
            </value>
            <value>
                <fullName>105,000</fullName>
            </value>
            <value>
                <fullName>100,000</fullName>
            </value>
            <value>
                <fullName>95,000</fullName>
            </value>
            <value>
                <fullName>90,000</fullName>
            </value>
            <value>
                <fullName>85,000</fullName>
            </value>
            <value>
                <fullName>80,000</fullName>
            </value>
            <value>
                <fullName>75,000</fullName>
            </value>
            <value>
                <fullName>70,000</fullName>
            </value>
            <value>
                <fullName>65,000</fullName>
            </value>
            <value>
                <fullName>60,000</fullName>
            </value>
            <value>
                <fullName>55,000</fullName>
            </value>
            <value>
                <fullName>50,000</fullName>
            </value>
            <value>
                <fullName>45,000</fullName>
            </value>
            <value>
                <fullName>40,000</fullName>
            </value>
            <value>
                <fullName>35,000</fullName>
            </value>
            <value>
                <fullName>30,000</fullName>
            </value>
            <value>
                <fullName>25,000</fullName>
            </value>
            <value>
                <fullName>20,000</fullName>
            </value>
            <value>
                <fullName>15,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>