force-app/main/default/objects/Account/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>