force-app/main/default/objects/Account/fields/Pro__c.field-meta.xml
<CustomField>
    <fullName>Pro__c</fullName>
    <label>Probability Of Closing Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 30 days</fullName>
            </value>
            <value>
                <fullName>Less than 60 days</fullName>
            </value>
            <value>
                <fullName>Less than 90 days</fullName>
            </value>
            <value>
                <fullName>Greater than 90 days</fullName>
            </value>
            <value>
                <fullName>Less than 6 Months</fullName>
            </value>
            <value>
                <fullName>Less than 1 Year</fullName>
            </value>
            <value>
                <fullName>More than 1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>