force-app/main/default/objects/Account/fields/Probability_of_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Revenue_Amount__c</fullName>
    <description>This is how much you think you can generate with this customer on the sale</description>
    <label>Probability of Revenue Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>