force-app/main/default/objects/Account/fields/Prospect_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Address_Line_1__c</fullName>
    <description>Address Line 1 Address for the Prospect Type Account</description>
    <inlineHelpText>Address Line 1 Address for the Prospect Type Account</inlineHelpText>
    <label>Address Line 1</label>
    <type>TextArea</type>
</CustomField>