force-app/main/default/objects/Account/fields/Prospect_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Address_Line_2__c</fullName>
    <description>Address Line 2 Address for the Prospect Account Type.</description>
    <inlineHelpText>Address Line 2 Address for the Prospect Account Type.</inlineHelpText>
    <label>Address Line 2</label>
    <type>TextArea</type>
</CustomField>