force-app/main/default/objects/Account/fields/Prospect_City__c.field-meta.xml
<CustomField>
    <fullName>Prospect_City__c</fullName>
    <description>City for the Prospect type Account record</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>