force-app/main/default/objects/Account/fields/Prospect_Desired_Boat_Length__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Desired_Boat_Length__c</fullName>
    <description>Specifies the boat length desired</description>
    <label>Desired Boat Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>