force-app/main/default/objects/Account/fields/Prospect_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_First_Name__c</fullName>
    <description>Related to Prospect Account Record Type</description>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>