force-app/main/default/objects/Account/fields/Prospect_HIN_of_Current_Boat__c.field-meta.xml
<CustomField>
    <fullName>Prospect_HIN_of_Current_Boat__c</fullName>
    <description>Specifies the HIN of the Current Boat</description>
    <label>HIN of Current Boat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>