force-app/main/default/objects/Account/fields/Prospect_Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Initial_Contact_Date__c</fullName>
    <description>Specifies the Initial Contact Date</description>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>