force-app/main/default/objects/Account/fields/Prospect_Lake_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lake_Address_1__c</fullName>
    <description>Specifies the Lake Address of the Prospect Account record.</description>
    <label>Lake Address 1</label>
    <type>TextArea</type>
</CustomField>