force-app/main/default/objects/Account/fields/Prospect_Lake_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lake_Address_2__c</fullName>
    <description>Lake Address 2 of the Prospect Account Type record.</description>
    <label>Lake Address 2</label>
    <type>TextArea</type>
</CustomField>