force-app/main/default/objects/Account/fields/Prospect_Lake_City__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lake_City__c</fullName>
    <description>Lake City</description>
    <label>Lake City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>