force-app/main/default/objects/Account/fields/Prospect_Lake_State__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lake_State__c</fullName>
    <description>Lake State</description>
    <label>Lake State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>