force-app/main/default/objects/Account/fields/Prospect_Lake_ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Lake_ZIP_Code__c</fullName>
    <description>Lake ZIP Code</description>
    <label>Lake ZIP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>