force-app/main/default/objects/Account/fields/Prospect_Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Last_Contact_Date__c</fullName>
    <description>Specifies the date when the Customer was last contacted</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>