force-app/main/default/objects/Account/fields/Prospect_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Last_Name__c</fullName>
    <description>Last Name for Prospect Account</description>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>