force-app/main/default/objects/Account/fields/Prospect_Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Mobile_Phone_Number__c</fullName>
    <description>Mobile Phone Number</description>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>