force-app/main/default/objects/Account/fields/Prospect_Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Next_Contact_Date__c</fullName>
    <description>Specifies the next date when the customer should be Contacted.</description>
    <label>Next Contact Date</label>
    <type>Date</type>
</CustomField>