force-app/main/default/objects/Account/fields/Prospect_Purchase_Date_of_Current_Boat__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Purchase_Date_of_Current_Boat__c</fullName>
    <description>Specifies the purchase date of Current Boat</description>
    <label>Purchase Date of Current Boat</label>
    <type>Date</type>
</CustomField>