force-app/main/default/objects/Account/fields/Prospect_Service_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Service_Discount_Rate__c</fullName>
    <description>Specifies the Discount Rate for servicing.</description>
    <label>Service Discount Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>