force-app/main/default/objects/Account/fields/Prospect_State__c.field-meta.xml
<CustomField>
    <fullName>Prospect_State__c</fullName>
    <description>State of the Prospect Type Account record</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>