force-app/main/default/objects/Account/fields/Prospect_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Zip_Code__c</fullName>
    <description>Zip Code for the Prospect Account Type.</description>
    <label>Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>