force-app/main/default/objects/Account/fields/Purchase_payment_method__c.field-meta.xml
<CustomField>
    <fullName>Purchase_payment_method__c</fullName>
    <label>Purchase payment method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>