force-app/main/default/objects/Account/fields/QBCustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>QBCustomerStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBCustomerStatus</label>
    <type>Checkbox</type>
</CustomField>