force-app/main/default/objects/Account/fields/Related_To_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Credit Apps</relationshipLabel>
    <relationshipName>Credit_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>