force-app/main/default/objects/Account/fields/Relationship_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Applicant__c</fullName>
    <label>Relationship to Applicant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>