force-app/main/default/objects/Account/fields/Sale_Class__c.field-meta.xml
<CustomField>
    <fullName>Sale_Class__c</fullName>
    <label>Sale Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>