force-app/main/default/objects/Account/fields/Sales_Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Sales_Activity_Score__c</fullName>
    <label>Sales Activity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>