force-app/main/default/objects/Account/fields/Schedule_Ride_Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Ride_Preferred_Date__c</fullName>
    <label>Schedule Ride - Preferred Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>