force-app/main/default/objects/Account/fields/Service_Request_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_City__c</fullName>
    <label>Service Request - City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>