force-app/main/default/objects/Account/fields/Service_Request_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Phone__c</fullName>
    <label>Service Request - Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>