force-app/main/default/objects/Account/fields/Service_Request_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_State_Province__c</fullName>
    <label>Service Request - State / Province</label>
    <length>200</length>
    <type>Text</type>
</CustomField>