force-app/main/default/objects/Account/fields/Service_Request_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Street_Address__c</fullName>
    <label>Service Request - Street Address</label>
    <type>TextArea</type>
</CustomField>