force-app/main/default/objects/Account/fields/Service_Request_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Work_Completed__c</fullName>
    <label>Service Request - Work Completed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>