force-app/main/default/objects/Account/fields/Service_Request_Your_Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Your_Boat_Year__c</fullName>
    <label>Service Request - Your Boat Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>