force-app/main/default/objects/Account/fields/Service_Request_Your_HIN_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Your_HIN_Number__c</fullName>
    <label>Service Request - Your HIN Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>