force-app/main/default/objects/Account/fields/Service_Request_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Zip_Postal_Code__c</fullName>
    <label>Service Request - Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>