force-app/main/default/objects/Account/fields/Service_score__c.field-meta.xml
<CustomField>
    <fullName>Service_score__c</fullName>
    <label>Service score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>