force-app/main/default/objects/Account/fields/SFA_Account_types_at_first_bank__c.field-meta.xml
<CustomField>
    <fullName>SFA_Account_types_at_first_bank__c</fullName>
    <label>SFA - Account types at first bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>