force-app/main/default/objects/Account/fields/SFA_Comments_Questions__c.field-meta.xml
<CustomField>
    <fullName>SFA_Comments_Questions__c</fullName>
    <label>SFA - Comments/Questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>