force-app/main/default/objects/Account/fields/SFA_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>SFA_Date_of_Birth__c</fullName>
    <label>SFA - Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>