force-app/main/default/objects/Account/fields/SFA_Downpayment__c.field-meta.xml
<CustomField>
    <fullName>SFA_Downpayment__c</fullName>
    <label>SFA - Downpayment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>