force-app/main/default/objects/Account/fields/SFA_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>SFA_Drivers_License__c</fullName>
    <label>SFA - Drivers License</label>
    <length>200</length>
    <type>Text</type>
</CustomField>