force-app/main/default/objects/Account/fields/SFA_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>SFA_Employer_City__c</fullName>
    <label>SFA - Employer City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>