force-app/main/default/objects/Account/fields/SFA_Employer_State__c.field-meta.xml
<CustomField>
    <fullName>SFA_Employer_State__c</fullName>
    <label>SFA - Employer State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>