force-app/main/default/objects/Account/fields/SFA_Employer_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>SFA_Employer_Street_Address__c</fullName>
    <label>SFA - Employer Street Address</label>
    <type>TextArea</type>
</CustomField>