force-app/main/default/objects/Account/fields/SFA_First_Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>SFA_First_Reference_Phone__c</fullName>
    <label>SFA - First Reference Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>