force-app/main/default/objects/Account/fields/SFA_Fourth_Reference_State__c.field-meta.xml
<CustomField>
    <fullName>SFA_Fourth_Reference_State__c</fullName>
    <label>SFA - Fourth Reference State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>