force-app/main/default/objects/Account/fields/SFA_Initial_Here__c.field-meta.xml
<CustomField>
    <fullName>SFA_Initial_Here__c</fullName>
    <label>SFA - Initial Here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>