force-app/main/default/objects/Account/fields/SFA_Landlord_Mortgage_Holder__c.field-meta.xml
<CustomField>
    <fullName>SFA_Landlord_Mortgage_Holder__c</fullName>
    <label>SFA - Landlord/Mortgage Holder</label>
    <length>200</length>
    <type>Text</type>
</CustomField>