force-app/main/default/objects/Account/fields/SFA_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>SFA_Manufacturer__c</fullName>
    <label>SFA - Manufacturer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>