force-app/main/default/objects/Account/fields/SFA_Model__c.field-meta.xml
<CustomField>
    <fullName>SFA_Model__c</fullName>
    <label>SFA - Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>